2008-02-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuView.m: Change to better respect the size of the
	popup when displaying the menu.
	Reworked patch by Matt Rice <ratmice@gmail.com>. 
	
2008-02-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButtonCell.m: Change version for encoding. Set
	preferred edge and arrow position when decoding old gorm files.
	New helper method for Gorm.

2008-02-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuView.m: White space cleanup.

2008-02-16 20:43-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSCell.m: Correction for bug#22332.
	* Source/NSSegmentedCell.m: 
	* Source/NSSegmentedControl.m: Set up default values in init 
	methods.

2008-02-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableColumn.m (-initWithIdentifier:): Set _width to 100
	and _min_width to 10.
	Patch by Quentin Mathe <qmathe@club-internet.fr>. 

2008-02-12  Adam Fedor  <fedor@gnu.org>

	* Source/GSFusedSilicaContext.m: Make sure to allocate a
	mutable dictionary.

2008-02-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSFont.m (-initWithName:matrix:fix:screenFont:role:): Add
	fallback for more missing standard fonts (LucidaGrande).

2008-02-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-_viewWillMoveToWindow:,
	-_viewWillMoveToSuperview:): New methods with code from 
	viewWillMoveToWindow: and viewWillMoveToSuperview:. The later are
	now empty to allow subclasses not to call the super implementation.
	* Source/NSWindow.m:
	Use these new methods in place of the old ones.
	
2008-02-08 Fred Kiefer <FredKiefer@gmx.de>

	* Images/LogoGNUstep.tiff: New files
	* Images/GNUmakefile: Install new files.
	* Source/GSInfoPanel.m (-initWithDictionary:): Add background
	logo. Old patch by Nicolas Roard <nicolas@roard.com>
	* Source/NSBitmapImageRep.m : Flag all created bitmaps as having
	or not having pre-muliplied alpha.
	* Source/NSBitmapImageRep.m (-setColor:atX:y:, -colorAtX:y:,